--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script defer src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="./script.js">
-        
-    </script>
+    <div class="buttons">
+        <div class="Rock">
+            <img class="rockPNG" src=" ./images/rock.png" alt="scissors">
+        </div>
+        <div class="Paper">
+            <img class="paperPNG" src="./images/paper.png" alt="paper">
+        </div>
+        <div class="Scissors">
+            <img class="scissorsPNG" src="./images/scissors.png" alt="scissors">
+        </div>
+    </div>
+    <div class="result"></div>
+    <div class="playerScore"></div>
+    <div class="computerScore"></div>
+
 </body>
 </html>
